<resources>
    <string name="app_name">CoZy</string>
    <string name="title_activity_main">Menu Principal</string>
    <string name="main_sensor_title">Sensores</string>
    <string name="main_monitoreo_title">Monitoreo</string>
    <string name="main_informes_title">Informes</string>
    <string name="main_exportar_title">Exportar</string>
    <string name="sensores_sensor1_name">Sensor 1</string>
    <string name="sensores_sensor2_name">Sensor 2</string>
    <string name="sensores_sensor3_name">Sensor 3</string>
    <string name="sensores_sensor4_name">Sensor 4</string>
    <string name="monitoreo_co2_name">Nivel de CO2 actual</string>
    <string name="monitoreo_sensor_name">Salón 123</string>
    <string name="monitoreo_co2_medida">Obteniendo última medida...</string>
    <string name="monitoreo_grafica_name">Últimas medidas capturadas</string>
    <string name="main_accion_sensores">sensors</string>
    <string name="main_accion_monitoreo">monitored</string>
    <string name="main_accion_informes">informs</string>
    <string name="main_accion_exportar">export</string>
    <string name="sensores_accion_sensor1">sensor1</string>
    <string name="title_activity_informe">informeActivity</string>
    <string name="sensor_id">Id del sensor</string>
    <string name="sensor_name">Nombre del sensor</string>
    <string name="sensor_status">Sensor habilitado/deshabilitado</string>
    <string name="sensor_save">Guardar información</string>
    <string name="sensor_accion_guardar">guardarSensor</string>
    <string name="sensor_intervalo">Intervalo de captura de datos (segundos)</string>
    <string name="inform_accion_cargar">load</string>
</resources>
